# MarioEdit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  console
src/: defines.hpp  main.cpp
src/classes/: Animation.cpp  Animation.hpp  AnimationFrame.cpp  AnimationFrame.hpp  Axis.cpp  Axis.hpp  Cursor.cpp  Cursor.hpp  Game.cpp  Game.hpp  Grid.cpp  Grid.hpp  Keyboard.cpp  Keyboard.hpp  PositionCalc.cpp  PositionCalc.hpp  Scale.cpp  Scale.hpp  Tile.cpp  Tile.hpp  TileConfig.hpp  TileRegistry.cpp  TileRegistry.hpp  TileSet.cpp  TileSet.hpp
src/classes/Animation/: SpecialBlockBlinkingAnimation.cpp  SpecialBlockBlinkingAnimation.hpp
src/classes/Exception/: TileNotFoundException.hpp
src/tests/: Axis.cpp  KeyboardTest.cpp  PositionCalc.cpp  TileRegistry.cpp
src/tests/TestCase/: AnimationFrame.cpp  GridTest.cpp  KeyboardTest.cpp  Scale.cpp  TileRegistry.cpp
